# modu32

./: CMakeLists.txt  partitions.csv  sdkconfig
components/core/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  config_data.h  event_bus.cpp  event_bus.h  module_manager.cpp  module_manager.h  shared_state.cpp  shared_state.h  ui_schema.cpp  ui_schema.h  wifi_manager.cpp  wifi_manager.h
components/hal/: CMakeLists.txt  board_config.h  ds18b20.h  hal.cpp  hal.h  relay.cpp  relay.h
components/web_interface/: CMakeLists.txt
components/web_interface/html/: index.html  script.js  style.css
components/web_interface/include/: web_interface.h
components/web_interface/src/: CMakeLists.txt  rpc_api.cpp  rpc_api.h  server_mongoose.cpp  server_mongoose.h  web_interface.cpp  websocket_manager.cpp  websocket_manager.h
config/: default_config.json
main/: CMakeLists.txt  idf_component.yml  main.cpp
modules/base_module/: base_module.h
modules/cooling_control/: cooling_control.cpp  cooling_control.h  cooling_control_api.h  cooling_control_events.h  cooling_control_state.h
modules/fridge_controller/: CMakeLists.txt  fridge_controller.h  fridge_controller_api.h  fridge_controller_events.h  fridge_controller_state.h
